# databricks-on-aws-demo

./: .gitignore  CLAUDE.md  Instructor.md  README.md  databricks.yml  pyproject.toml
resources/: app.yml  job.yml  pipeline.yml  shopnow_lakebase.yml  shopnow_revenue_dashboard.yml  shopnow_warehouse.yml
src/: 00-introduction.sql
src/01-pipeline/: 01-declarative-pipeline.sql  02-pipeline-cdc.sql
src/02-governance/: 01-unity-catalog.sql  03-unity-catalog.sql
src/03-ai-agent/: 01-agent-creation.py
src/03-aibi/: 04-dashboard.sql  05-genie-space.sql
src/04-ai-agent/: 06-agent-creation.py
src/04-ai-bi/: 01-dashboard.sql  02-genie-space.sql  shopnow_revenue.lvdash.json
src/05-lakebase/: 01-reverse-etl-lakebase.py  07-reverse-etl-lakebase.py
src/06-app/: app.py  app.yaml  requirements.txt
src/_resources/: 00-setup.py  config.py  restart-app.py  workshop-cleanup.py  workshop-setup.py
